Fix .btn-default styling so date button doesn't look disabled. Added .btn-subtle for the Go Back button. On review page, right aligned the edit and remove buttons

--- a/app/css/style.less
+++ b/app/css/style.less
@@ -282,9 +282,10 @@ main.front-form {
     .btn-bold{
       .proximasemi;
     }
-    .btn-default {
+    .btn-subtle {
       background: #f4f4f4;
       .gray;
+      border-color: #ccc;
     }
     button.eighty, a.eighty {
       width: 78%;
